added loading and style changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App{
   min-height:100vh;
-  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+  background-image: white;
+  
 }
 
 .search-form{
@@ -8,19 +9,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .search-bar{
   width:50%;
-  border: none;
+  border: 1px solid #1DA1F2 ;
   padding:10px;
+  margin:5px;
+  border-radius: 5px;
 }
 
 .search-button{
-  background:#fcb69f;
+  background:#1DA1F2;
   border:none;
   padding:10px 20px;
   color:white;
+  border-radius: 5px;
 }
 
 .recipes{
