--- a/src/result.module.css
+++ b/src/result.module.css
@@ -1,4 +1,4 @@
-.recipe{
+.result{
     border-radius:10px;
     box-shadow: 0px 5px 20px gray;
     display: flex;
@@ -7,10 +7,16 @@
     align-items: center;
     min-width: 40%;
     margin-top: 3.5vw;
+    background-color: #1DA1F2;
+    padding:40px;
 }
 
 .image{
     border-radius:50%;
     width: 100px;
     height:100px;
+}
+
+.resultText{
+color:white;
 }
