--- a/src/result.module.css
+++ b/src/result.module.css
@@ -11,6 +11,32 @@
     padding:40px;
 }
 
+.positiveResult{
+    border-radius:10px;
+    box-shadow: 0px 5px 20px gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    min-width: 40%;
+    margin-top: 3.5vw;
+    background-color:green;
+    padding:40px;
+}
+
+.negativeResult{
+    border-radius:10px;
+    box-shadow: 0px 5px 20px gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    min-width: 40%;
+    margin-top: 3.5vw;
+    background-color: red;
+    padding:40px;
+}
+
 .image{
     border-radius:50%;
     width: 100px;
@@ -20,3 +46,12 @@
 .resultText{
 color:white;
 }
+
+.positiveResultText{
+    color:green;
+    }
+
+    
+.negativeResultText{
+    color:red;
+    }
