--- a/src/result.module.css
+++ b/src/result.module.css
@@ -1,14 +1,17 @@
-.result{
+.cloudResult{
     border-radius:10px;
     box-shadow: 0px 5px 20px gray;
     display: flex;
-    flex-direction: column;
+    
     justify-content: space-around;
     align-items: center;
-    min-width: 40%;
-    margin-top: 3.5vw;
-    background-color: #1DA1F2;
-    padding:40px;
+    max-width: 60%;
+    margin-top: 3.5vw; 
+    margin-left:auto;
+    margin-right:auto;  
+    vertical-align:middle;
+    text-align: center;
+    padding-bottom: 50px;
 }
 
 .positiveResult{
