--- a/src/result.module.css
+++ b/src/result.module.css
@@ -2,7 +2,7 @@
     border-radius:10px;
     box-shadow: 0px 5px 20px gray;
     display: flex;
-    
+    background-color: white;
     justify-content: space-around;
     align-items: center;
     max-width: 60%;
