--- a/src/result.module.css
+++ b/src/result.module.css
@@ -14,6 +14,22 @@
     padding-bottom: 50px;
 }
 
+.cloudResult2{
+    border-radius:10px;
+    box-shadow: 0px 5px 20px gray;
+    display: flex;
+    background-color: white;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 60%;
+    margin-top: 3.5vw; 
+    margin-left:auto;
+    margin-right:auto;  
+    vertical-align:middle;
+    text-align: center;
+    padding-bottom: 50px;
+}
+
 .positiveResult{
     border-radius:10px;
     box-shadow: 0px 5px 20px gray;
@@ -25,6 +41,23 @@
     margin-top: 3.5vw;
     background-color:green;
     padding:40px;
+}
+.tweet{
+    border-radius:10px;
+    box-shadow: 0px 5px 20px gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 50%;
+    margin-top: 3.5vw; 
+    background-color: #1DA1F2;
+    margin-left:auto;
+    margin-right:auto;  
+    vertical-align:middle;
+    text-align: center;
+    padding-bottom: 50px;
+    color:#1DA1F2;
 }
 
 .negativeResult{
@@ -58,5 +91,10 @@ color:white;
 .negativeResultText{
     color:red;
     }
+
+.smiley{
+    padding:10px;
+    
+}
 
 
