--- a/src/result.module.css
+++ b/src/result.module.css
@@ -39,17 +39,35 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    max-width: 50%;
+    width: 100%;
+    height:100%;
     margin-top: 3.5vw; 
     background-color: #1DA1F2;
-    margin-left:auto;
-    margin-right:auto;  
-    vertical-align:middle;
+    padding:20px;
+    
     text-align: center;
     padding-bottom: 50px;
     color:#1DA1F2;
 }
 
+
+
+.carousel{
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    height:50%;
+    margin-top: 3.5vw; 
+    margin-left:auto;
+    margin-right:auto;  
+    vertical-align:middle;
+    text-align: center;
+
+    
+}
 .cloudContainer{
     box-sizing: border-box; 
     border-radius:10px;
@@ -68,7 +86,18 @@
     padding: 10px; 
     
 }
-
+.navBar{
+    background-color: #1DA1F2;
+}
+.svgContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin-top: 3.5vw; 
+    text-align: center;
+    
+}
 .cloud{
     
     height:80%;
