--- a/src/App.css
+++ b/src/App.css
@@ -40,20 +40,95 @@
   box-shadow: 0px 1px 2px gray;
 }
 
-button.rec-dot{
-  background-color: rgb(235, 16, 16);
-  box-shadow: 0 0 1px 3px rgba(235, 16, 16, 0.5);
-}
 
-button.rec-dot:hover, button.rec-dot:active, button.rec-dot:focus  {
-  box-shadow: 0 0 1px 3px rgba(235,16,16,0.5);
-}
 
 .carousel-wrapper {
   width: 70%;
-  display: flex;
+  flex-direction: column;
   margin-left:auto;
   margin-right:auto;  
-  margin-top: 5vw; 
+  margin-top: 10vw; 
   vertical-align:middle;
+  display: flex;
+  flex-grow: 1;
+ 
+  
+}
+
+.rec.rec-arrow {
+  vertical-align:middle;
+  color:white;
+  background-color:#1DA1F2 ;
+  display: middle;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20%;
+  margin-bottom: 20%;
+}
+
+
+.rec.rec-arrow {
+  border-radius: 50%;
+  opacity: 50%;
+  
+}
+
+
+/* hide disabled buttons */
+.rec.rec-arrow:disabled {
+  visibility: hidden;
+}
+button.rec.rec-arrow:hover{
+  background-color: #1DA1F2;
+  transform: scale(1.2);
+  opacity: 100%;
+  size:150%;
+}
+
+button.rec.rec-arrow:active{
+  background-color: #1DA1F2;
+  opacity: 100%;
+}
+
+button.rec.rec-arrow:focus{
+  background-color: #1DA1F2;
+  opacity: 100%;
+}
+
+button.rec-dot{
+  background-color: #1DA1F2;
+}
+
+button.rec-dot{
+  background-color: #1DA1F2;
+  opacity: 70% ;
+  box-shadow: none;
+  margin-top: -3vw;
+
+}
+
+button.rec-dot:hover  {
+  transform: scale(1.2);
+  box-shadow: inset 0 0 1px 0px black;
+}
+
+button.rec-dot:focus  {
+  transform: scale(1.1);
+  box-shadow: inset 0 0 1px 0px black;
+}
+
+
+
+
+
+.rec-carousel-item:hover{
+  transform: scale(1.2);
+  
+}
+
+.rec.rec-dot_active {
+  transform: scale(1.2);
+  box-shadow: none;
+  opacity: 100%;
 }
