--- a/src/result.module.css
+++ b/src/result.module.css
@@ -10,7 +10,7 @@
     justify-content: space-around;
     align-items: center;
     max-width: 50%;
-    margin-top: 3.5vw; 
+    margin-top: 10vw; 
     margin-left:auto;
     margin-right:auto;  
     vertical-align:middle;
@@ -35,16 +35,19 @@
 .tweet{
     border-radius:10px;
     box-shadow: 0px 5px 20px gray;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    vertical-align:middle;
     background-color: #1DA1F2;
     text-align: center;
     color:#1DA1F2;
-    padding: 20px;
+    padding: 30px;
+    margin-top: 20%;
+    margin-bottom: 20%;
+    vertical-align: middle;
+    fill: 100%;
+    height:100%;
+    
+    
+    
+  
 }
 
 
@@ -59,7 +62,7 @@
     justify-content: space-around;
     align-items: center;
     max-width: 50%;
-    margin-top: 3.5vw; 
+    margin-top: 10vw; 
     background-color: white;
     margin-left:auto;
     margin-right:auto;  
@@ -111,7 +114,16 @@
 
 .resultText{
 color:white;
+
 }
+
+.resultTextSentiment{
+    color:white;
+    font-weight: bold;
+    font-size: 120%;
+    margin-top:30px;
+}
+
 
 .positiveResultText{
     color:green;
