--- a/src/result.module.css
+++ b/src/result.module.css
@@ -21,34 +21,39 @@
 
 
 .positiveResult{
+    box-sizing: border-box; 
     border-radius:10px;
     box-shadow: 0px 5px 20px gray;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
-    margin-top: 3.5vw;
-    margin-left:auto;
-    margin-right:auto;  
-    background-color:green;
-    padding:40px;
-}
-
-.negativeResult{
-    border-radius:10px;
-    box-shadow: 0px 5px 20px gray;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
-    margin-top: 3.5vw;
-    background-color: red;
-    padding:40px;
+    max-width: 50%;
+    margin-top: 10vw; 
+    background-color: green;
     margin-left:auto;
     margin-right:auto;  
     vertical-align:middle;
+    text-align: center;
+    padding: 10px; 
+}
+
+.negativeResult{
+    box-sizing: border-box; 
+    border-radius:10px;
+    box-shadow: 0px 5px 20px gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 50%;
+    margin-top: 10vw; 
+    background-color: red;
+    margin-left:auto;
+    margin-right:auto;  
+    vertical-align:middle;
+    text-align: center;
+    padding: 10px; 
 }
 .tweet{
     border-radius:10px;
