--- a/src/result.module.scss
+++ b/src/result.module.scss
@@ -1,22 +1,12 @@
 
 
 .chart{
-    border-radius:10px;
-    min-width:50%;
-    max-width: 90%;
-    height: 600px;
+    max-width:100%;
     box-shadow: 0px 5px 20px gray;
-    display: flex;
     background-color: white;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 30vw; 
-    margin-top: 5vw; 
-    margin-left:auto;
-    margin-right:auto;  
-    vertical-align:middle;
-    text-align: center;
     padding: 50px;
+    margin-top: 20vw;
+    height:700px; 
 }
 
 
@@ -94,27 +84,34 @@
 }
 
 .cloudContainer{
-    box-sizing: border-box; 
-    border-radius:10px;
     box-shadow: 0px 5px 20px gray;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
-    min-width:50%;
-    max-width: 90%;
+    width: 100%;
     min-height: 200px;
-    margin-top: 30vw; 
-    margin-top: 5vw; 
-    background-color: white;
-    margin-left:auto;
-    margin-right:auto;  
-    vertical-align:middle;
+    margin-top: 20vw; 
+    background-color: #1f5156;
     text-align: center;
-    padding: 10px; 
-    
-    
+    padding: 10px;    
+}
+
+
+.negCloudContainer{
+    box-shadow: 0px 5px 20px gray;
+    width: 100%;
+    min-height: 200px;
+    margin-top: 20vw; 
+    background-color: #56241f;
+    text-align: center;
+    padding: 10px;    
+}
+
+.posCloudContainer{
+    box-shadow: 0px 5px 20px gray;
+    width: 100%;
+    min-height: 200px;
+    margin-top: 20vw; 
+    background-color: #35561f;
+    text-align: center;
+    padding: 10px;    
 }
 .navBar{
     background-color: #1f5156;
