--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -4,7 +4,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   
     font-size: 1.2rem;
     position: sticky;
     top: 0;
@@ -85,7 +84,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      border-top: 1pxsolid #fff;
+      border-top: 1px solid #fff;
       position: absolute;
       top: 80px;
       left: -110%;
@@ -94,7 +93,7 @@
     }
 
     .nav-logo {
-        align-items: right;
+        align-items: left;
         margin-left: 20px;
         cursor: pointer;
         text-decoration: none;
@@ -112,11 +111,13 @@
     .nav-item .active {
       color: #ffdd40;
       border: none;
+      
     }
     .nav-links {
       padding: 1.5rem;
       width: 100%;
       display: table;
+      
     }
   
     .nav-icon {
