fixed a bunch of stuff and made a new carousle

--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,11 @@
 
 
 .carousel-wrapper {
-  width: 80%;
+  width: 90%;
   flex-direction: column;
   margin-left:auto;
   margin-right:auto;  
-  margin-top: 30vw; 
+  margin-bottom: 50vw; 
   margin-top: 5vw; 
   vertical-align:middle;
   display: flex;
