--- a/src/result.module.css
+++ b/src/result.module.css
@@ -5,7 +5,8 @@
     box-shadow: 0px 5px 20px gray;
     background-color: white;
     padding: 50px;
-    margin-top: 20vw;
+    margin-top: 30vw;
+    margin-bottom: 30vw;
     height:700px; 
 }
 
@@ -18,6 +19,8 @@
     min-height: 200px;
     padding: 50px;
     background-color:#35561f;
+    align-items: center;
+    text-align: center;
     
 }
 
@@ -28,27 +31,35 @@
     min-height: 200px;
     padding: 50px;
     background-color: #56241f;
+    align-items: center;
+    text-align: center;
+    
 }
-
-
-
 
 
 .tweet{
-    border-radius:10px;
-    box-shadow: 0px 5px 20px gray;
-    background-color: #1f5156;
-    text-align: center;
-    color:#1f5156;
-    padding: 30px;  
-    margin-top: 20%;
-    margin-bottom: 20%;
-    vertical-align: middle;
-    width: 100%
-    
-    
-  
+        border-radius:10px;
+        box-shadow: 0px 5px 20px gray;
+        background-color: #1f5156;
+        text-align: center;
+        color:#1f5156;
+        padding: 5px;  
+        margin: 20px;
+        height:300px;
+        vertical-align: middle;
+        padding-bottom: 20px;
+        padding-top:15px;
 }
+
+
+.tweet:hover{
+    transform: scale(1.1);
+}
+
+
+
+
+
 .style.cloudAndFab{
     display: flex;
     flex-direction: row;
@@ -167,4 +178,44 @@ color:white;
     
 }
 
+.orcaText{
+    color:white;
+    font-family:"OCR A";
+    font-size: 3em;
+    font-weight: bolder;
+}
 
+@media screen and (max-width: 1200px) {
+
+    .tweet{
+        border-radius:10px;
+        box-shadow: 0px 5px 20px gray;
+        background-color: #1f5156;
+        text-align: center;
+        color:#1f5156;
+        padding: 5px;  
+        margin: 20px;
+        height:400px;
+        vertical-align: middle;
+        padding-bottom: 20px;
+}
+
+.orcaText{
+    color:white;
+    font-family:"OCR A";
+    font-size: 2.5em;
+    font-weight: bolder;
+}
+}
+
+
+@media screen and (max-width: 500px) {
+
+
+.orcaText{
+    color:white;
+    font-family:"OCR A";
+    font-size: 2em;
+    font-weight: bolder;
+}
+}
