--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -8,6 +8,9 @@
     position: sticky;
     top: 0;
     z-index: 20;
+    width: 100%;
+    
+    
   }
   
   .nav-container {
@@ -17,25 +20,37 @@
     align-items: center;
     width: 100%;
     height: 80px;
-    max-width: 1500px;
+  
   }
   
   .nav-logo {
-    align-items: right;
-    margin-left: 50%;
+    
+    
+    text-align: right;
     margin-right: 25px;
+    flex-basis: 50%;
     margin-bottom: 25px;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
     flex-grow: 1;
+    
+
+  
+    
   }
   
   .nav-menu {
     display: flex;
     list-style: none;
-    text-align: center;
-    margin-right: 2rem;
+    align-items: left;
+    text-align: left;
+    margin-left: auto;
+    flex-basis: 30%;
+    justify-content: center;
+    align-items: center;
+
+    
   }
   
   .nav-links {
@@ -44,7 +59,13 @@
     text-align: center;
     padding: 0.5rem 1rem;
     height: 100%;
+    width: 100%;
     border-bottom: 3px solid transparent;
+    align-items: center;
+    justify-content: center;
+    display: block;
+    
+    width: 100%;
   }
   .fa-code {
     margin-left: 1rem;
@@ -54,6 +75,10 @@
     line-height: 40px;
     text-align: center;
     margin-right: 1rem;
+    align-items: center;
+    line-height: 1.3;
+  
+    
   }
   
   .nav-item:after {
@@ -73,13 +98,14 @@
   .nav-item .active {
     color: #ffdd40;
     border: 1px solid #ffdd40;
+   
   }
   
   .nav-icon {
     display: none;
   }
   
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 700px) {
     .nav-menu {
       display: flex;
       flex-direction: column;
@@ -90,15 +116,18 @@
       left: -110%;
       opacity: 1;
       transition: all 0.5s ease;
+      padding-bottom: 30px;
     }
 
     .nav-logo {
         align-items: left;
+        text-align: left;
         margin-left: 20px;
         cursor: pointer;
         text-decoration: none;
         font-size: 2rem;
         flex-grow: 1;
+        flex-basis: 100%;
       }
   
     .nav-menu.active {
@@ -110,13 +139,14 @@
     }
     .nav-item .active {
       color: #ffdd40;
-      border: none;
+      border: none
       
     }
     .nav-links {
       padding: 1.5rem;
       width: 100%;
       display: table;
+     
       
     }
   
