--- a/src/result.module.css
+++ b/src/result.module.css
@@ -5,8 +5,7 @@
     box-shadow: 0px 5px 20px gray;
     background-color: white;
     padding: 50px;
-    margin-top: 30vw;
-    margin-bottom: 30vw;
+   
     height:700px; 
 }
 
@@ -15,7 +14,7 @@
 .positiveResult{
     box-shadow: 0px 5px 20px gray;
     width: 100%;
-    margin-top: 10vw; 
+  
     min-height: 200px;
     padding: 50px;
     background-color:#35561f;
@@ -27,7 +26,6 @@
 .negativeResult{
     box-shadow: 0px 5px 20px gray;
     width: 100%;
-    margin-top: 10vw; 
     min-height: 200px;
     padding: 50px;
     background-color: #56241f;
@@ -49,11 +47,15 @@
         vertical-align: middle;
         padding-bottom: 20px;
         padding-top:15px;
+        font-size: 15px;
+        justify-content: center;
+        align-items: center;
+        
 }
 
 
 .tweet:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 
@@ -98,7 +100,7 @@
     box-shadow: 0px 5px 20px gray;
     width: 100%;
     min-height: 200px;
-    margin-top: 20vw; 
+    
     background-color: #1f5156;
     text-align: center;
     padding: 10px;    
@@ -109,7 +111,7 @@
     box-shadow: 0px 5px 20px gray;
     width: 100%;
     min-height: 200px;
-    margin-top: 20vw; 
+    
     background-color: #56241f;
     text-align: center;
     padding: 10px;    
@@ -119,7 +121,7 @@
     box-shadow: 0px 5px 20px gray;
     width: 100%;
     min-height: 200px;
-    margin-top: 20vw; 
+  
     background-color: #35561f;
     text-align: center;
     padding: 10px;    
@@ -193,11 +195,13 @@ color:white;
         background-color: #1f5156;
         text-align: center;
         color:#1f5156;
-        padding: 5px;  
+        padding: 10px;  
         margin: 20px;
         height:400px;
         vertical-align: middle;
         padding-bottom: 20px;
+        
+
 }
 
 .orcaText{
