--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   flex-direction: column;
   margin-left:auto;
   margin-right:auto;  
-  
+  margin-bottom: 20vw;
   margin-top: 5vw; 
   vertical-align:middle;
   display: flex;
