--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -117,6 +117,8 @@
       opacity: 1;
       transition: all 0.5s ease;
       padding-bottom: 30px;
+      gap: 30px;
+     
     }
 
     .nav-logo {
@@ -143,10 +145,10 @@
       
     }
     .nav-links {
-      padding: 1.5rem;
+      padding: none;
       width: 100%;
       display: table;
-     
+      
       
     }
   
