--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,36 @@
 .App{
   
   background-image: white;
+  
 }
 
 
-.particles{
-  z-index: -1;
- 
+.particles-bg-canvas-self{
+  position: fixed;
+  height:100vh;
 }
+
+
+
+.react__slick__slider__parent {
+	    position: relative;
+	  }
+	  
+	  .react__slick__slider__parent .slick-prev,
+	  .react__slick__slider__parent .slick-next {
+	    position: absolute;
+	    top: 50%;
+	  }
+	  
+	  
+	  .react__slick__slider__parent .slick-prev:before {
+	    color: #1f5156;
+	  }
+
+    .react__slick__slider__parent .slick-next:before {
+	    color: #1f5156;
+	  }
+
 
 .search-form{
   min-height:10vh;
@@ -18,11 +41,12 @@
   margin-left:auto;
   margin-right:auto;  
   vertical-align:middle;
+  margin-top: 10vh;
   
 }
 
 .search-bar{
-  width:84%;
+  width:100%;
   border: 1px solid #1f5156;
   padding:10px;
   margin:5px;
@@ -54,80 +78,18 @@
   
 }
 
-.rec.rec-arrow {
-  vertical-align:middle;
-  color:white;
-  background-color:#1f5156 ;
-  display: middle;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 20%;
-  margin-bottom: 20%;
-}
+.particles {
 
-
-.rec.rec-arrow {
-  border-radius: 50%;
-  opacity: 50%;
-  
-}
-
-
-/* hide disabled buttons */
-.rec.rec-arrow:disabled {
-  visibility: hidden;
-}
-button.rec.rec-arrow:hover{
-  background-color: #1f5156;
-  transform: scale(1.2);
-  opacity: 100%;
-  size:150%;
-}
-
-button.rec.rec-arrow:active{
-  background-color: #1f5156;
-  opacity: 100%;
-}
-
-button.rec.rec-arrow:focus{
-  background-color: #1f5156;
-  opacity: 100%;
-}
-
-button.rec-dot{
-  background-color: #1f5156;
-}
-
-button.rec-dot{
-  background-color: #1f5156;
-  opacity: 70% ;
-  box-shadow: none;
-  margin-top: -3vw;
-
-}
-
-button.rec-dot:hover  {
-  transform: scale(1.2);
-  box-shadow: inset 0 0 1px 0px black;
-}
-
-button.rec-dot:focus  {
-  transform: scale(1.1);
-  box-shadow: inset 0 0 1px 0px black;
-}
+  width: 100%;
+top:0;
+left:0;
+ height: 100%;
+ z-index: -200;
+ position: fixed;
 
 
 
 
+ 
 
-.rec-carousel-item:hover{
-  transform: scale(1.2);
-  
-}
-
-.rec.rec-dot_active {
-  transform: scale(1.2);
-  box-shadow: none;
-  opacity: 100%;
 }
