--- a/src/result.module.css
+++ b/src/result.module.css
@@ -10,14 +10,17 @@
     height:700px; 
 }
 
+.pieChart{
+    width:100%;
+    height:100%;
+}
+
+
 
 
 .positiveResult{
-    box-shadow: 0px 5px 20px gray;
+    
     width: 100%;
-    margin-top: 10vw;
-    min-height: 200px;
-    padding: 50px;
     background-color:#35561f;
     align-items: center;
     text-align: center;
@@ -25,14 +28,13 @@
 }
 
 .negativeResult{
-    box-shadow: 0px 5px 20px gray;
+  
     width: 100%;
-    min-height: 200px;
-    padding: 50px;
+    
     background-color: #56241f;
     align-items: center;
     text-align: center;
-    margin-top: 10vw;
+    
     
 }
 
