--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,25 @@ position: fixed;
   }
 }
 
+.customOverlay {
+  background: rgba(36, 123, 160, 0.7);
+}
+.customModal {
+  background: #b2dbbf;
+  max-width: 500px;
+  text-align: Center;
+  
+
+}
+
+.trends-div{
+  margin-top: 15vh;
+  width:80%;
+  margin-left: auto;
+  margin-right: auto;
+ 
+}
+
 @media screen and (max-width: 700px) {
 .flex-container {
   display: flex;
