--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -49,7 +49,7 @@
     flex-basis: 30%;
     justify-content: center;
     align-items: center;
-
+    
     
   }
   
@@ -64,7 +64,6 @@
     align-items: center;
     justify-content: center;
     display: block;
-    
     width: 100%;
   }
   .fa-code {
@@ -116,9 +115,17 @@
       left: -110%;
       opacity: 1;
       transition: all 0.5s ease;
-      padding-bottom: 30px;
-      gap: 30px;
-     
+      gap: 15px;
+    
+    }
+
+    li:nth-child(1)
+    {
+      margin-top: 20px;
+    }
+    li:nth-child(5)
+    {
+      margin-bottom: 20px;
     }
 
     .nav-logo {
@@ -141,14 +148,14 @@
     }
     .nav-item .active {
       color: #ffdd40;
-      border: none
+      border: none;
+      
       
     }
     .nav-links {
-      padding: none;
+      padding: 5px;
       width: 100%;
       display: table;
-      
       
     }
   
