--- a/src/App.css
+++ b/src/App.css
@@ -199,13 +199,7 @@ position: fixed;
 
 }
 
-.trends-div{
-  margin-top: 15vh;
-  width:80%;
-  margin-left: auto;
-  margin-right: auto;
- 
-}
+
 
 @media screen and (max-width: 700px) {
 .flex-container {
@@ -241,6 +235,7 @@ position: fixed;
   left: 0;
   width: 100%;
   height:60vh;
+ 
   
  
 }
@@ -252,7 +247,7 @@ position: fixed;
 .bg-bubbles li {
   position: absolute;
   list-style: none;
-  display: block;
+
   width: 80px;
   height: 80px;
   border-radius: 80px;
@@ -263,9 +258,17 @@ position: fixed;
   -webkit-animation: bubble 5s infinite;
   -webkit-animation-timing-function: linear;
   animation: bubble 10s linear infiwnite;
-  line-height:80px;
+  
   text-align:center;
   box-shadow: 0px 3px #888888;
+
+  
+  line-height: 1em; /* a */
+  max-height: 5em; 
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 .bg-bubbles li:nth-child(1) {
@@ -427,9 +430,8 @@ position: fixed;
 
 .bg-bubbles li:hover {
   
-  -webkit-animation: bubble 300ms forwards;
-  -webkit-animation-timing-function: linear ;
-  animation: hover 300ms linear forwards;
+
+  animation: hover 100ms linear forwards;
 }
 
 
@@ -447,50 +449,274 @@ position: fixed;
 
 @media screen and (max-width: 1440px) {
 
+  
+
   .bg-bubbles li {
    
     width: 70px;
     height: 70px;
     border-radius: 70px;
-    line-height:70px;
+    
    
+  }
+
+  .bg-bubbles li:nth-child(1) {
+    top: 5%;
+    left:18%;
+    
+   
+    -webkit-animation-delay: 700ms;
+  }
+  
+  .bg-bubbles li:nth-child(2) {
+    
+    top: 18%;
+    left:28%;
+   
+  
+  }
+  
+  .bg-bubbles li:nth-child(3) {
+    top: 35%;
+    left:18%;
+    
+    -webkit-animation-delay: 500ms;
+  }
+  
+  .bg-bubbles li:nth-child(4) {
+   
+    top: 5%;
+    left:37%;
+    
+  }
+  
+  .bg-bubbles li:nth-child(5) {
+    
+    top: 40%;
+    left:30%;
+  }
+  
+  .bg-bubbles li:nth-child(6) {
+    
+    top: 27%;
+    left:40%;
+  
+   
+    -webkit-animation-delay: 500ms;
+  }
+  
+  .bg-bubbles li:nth-child(7) {
+    
+    top: 35%;
+    left:50%;
+    
+  
+   
+  }
+  
+  .bg-bubbles li:nth-child(8) {
+   
+    
+    
+  
+    
+    -webkit-animation-delay: 500ms;
+    
+    top: 25%;
+    left:60%;
+  }
+  
+  .bg-bubbles li:nth-child(9) {
+    
+    top: 7%;
+    left:63%;
+   
+    
+    animation-delay: 2s;
+    
+  }
+  
+  .bg-bubbles li:nth-child(10) {
+    
+    top: 50%;
+    left:65%;
+    
+  
+  }
+  
+  .bg-bubbles li:nth-child(11) {
+    
+    
+    top: 30%;
+    left:70%;
+  }
+  
+  .bg-bubbles li:nth-child(12) {
+    
+    top: 58%;
+    left:33%;
+    
+  }
+  .bg-bubbles li:nth-child(13) {
+    
+    top: 5%;
+    left:75%;
+    
+  
+  }
+  .bg-bubbles li:nth-child(14) {
+   
+    top: 58%;
+    left:50%;
+   
+    
   }
 }
 
-@media screen and (max-width: 1000px) {
 
-  .bg-bubbles li {
-   
-    width: 60px;
-    height: 60px;
-    border-radius: 60px;
-    line-height:60px;
-   
-  }
-}
 
 
 @media screen and (max-width: 1000px) {
+ 
 
   .bg-bubbles li {
    
-    width: 60px;
-    height: 60px;
-    border-radius: 60px;
-    line-height:60px;
+    width: 70px;
+    height: 70px;
+    border-radius: 70px;
+    
    
   }
+
+
+  
 }
 
 
 @media screen and (max-width: 800px) {
 
+ 
+
   .bg-bubbles li {
    
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    line-height:50px;
-    font-size: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 60px;
+    
+    font-size: 12px;
+  }
+
+
+
+  .bg-bubbles li:nth-child(1) {
+    top: 5%;
+    left:15%;
+    color:white;
+   
+    -webkit-animation-delay: 700ms;
+  }
+  
+  .bg-bubbles li:nth-child(2) {
+    
+    top: 15%;
+    left:28%;
+   
+  
+  }
+  
+  .bg-bubbles li:nth-child(3) {
+    top: 35%;
+    left:15%;
+    
+    -webkit-animation-delay: 500ms;
+  }
+  
+  .bg-bubbles li:nth-child(4) {
+   
+    top: 5%;
+    left:37%;
+   
+  }
+  
+  .bg-bubbles li:nth-child(5) {
+    
+    top: 40%;
+    left:30%;
+  }
+  
+  .bg-bubbles li:nth-child(6) {
+    
+    top: 25%;
+    left:40%;
+  
+   
+    -webkit-animation-delay: 500ms;
+  }
+  
+  .bg-bubbles li:nth-child(7) {
+    
+    top: 40%;
+    left:50%;
+    
+  
+   
+  }
+  
+  .bg-bubbles li:nth-child(8) {
+   
+    
+   
+  
+    
+    -webkit-animation-delay: 500ms;
+    
+    top: 25%;
+    left:60%;
+  }
+  
+  .bg-bubbles li:nth-child(9) {
+    
+    top: 7%;
+    left:67%;
+   
+    
+    animation-delay: 2s;
+    
+  }
+  
+  .bg-bubbles li:nth-child(10) {
+  
+    top: 45%;
+    left:66%;
+    
+  
+  }
+  
+  .bg-bubbles li:nth-child(11) {
+    
+    
+    top: 30%;
+    left:75%;
+  }
+  
+  .bg-bubbles li:nth-child(12) {
+   
+    top: 58%;
+    left:33%;
+    
+  }
+  .bg-bubbles li:nth-child(13) {
+    
+    top: 5%;
+    left:80%;
+    
+  
+  }
+  .bg-bubbles li:nth-child(14) {
+   
+    top: 58%;
+    left:50%;
+   
+    
   }
 }
