--- a/src/Trends.css
+++ b/src/Trends.css
@@ -1,174 +1,53 @@
 .bg-bubbles li {
-    position: absolute;
-    list-style: none;
-    display: block;
-    width: 80px;
-    height: 80px;
-    border-radius: 80px;
-    color:white;
-    background-color: #1f5156;
-    top: 5%;
-    left:50%;
-    -webkit-animation: bubble 5s infinite;
-    -webkit-animation-timing-function: linear;
-    animation: bubble 10s linear infiwnite;
-    line-height:80px;
-    text-align:center;
-    box-shadow: 0px 3px #888888;
+  position: absolute;
+  list-style: none;
+  color:white;
+  background-color: #1f5156;
+  top: 5%;
+  left:50%;
+  animation: bubble 10s linear infinite;
+  text-align:center;
+  box-shadow: 0px 3px #888888;
+  opacity:1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  
+
+
+ 
+}
+
+
+.bg-bubbles li:hover {
+
+  cursor: pointer;
+  opacity: 0.8;
+  transform: scale(1.05);
+}
+
+
+
+
+
+
+@keyframes bubble {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
-  
-  .bg-bubbles li:nth-child(1) {
-    top: 5%;
-    left:28%;
-    
-   
-    -webkit-animation-delay: 700ms;
+  50% {
+    -webkit-transform: translateY(-10px) ;
+    transform: translateY(-10px);
+    -webkit-transform: translateX(10);
+    transform: translateX(10);
   }
-  
-  .bg-bubbles li:nth-child(2) {
-    
-    top: 15%;
-    left:35%;
-  
-  
+  100%{
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
-  
-  .bg-bubbles li:nth-child(3) {
-    top: 35%;
-    left:30%;
-   
-    -webkit-animation-delay: 500ms;
-  }
-  
-  .bg-bubbles li:nth-child(4) {
-   
-    top: 5%;
-    left:43%;
-  
-  }
-  
-  .bg-bubbles li:nth-child(5) {
-  
-    top: 40%;
-    left:40%;
-  }
-  
-  .bg-bubbles li:nth-child(6) {
-    
-    top: 25%;
-    left:47%;
-  
-  
-    -webkit-animation-delay: 500ms;
-  }
-  
-  .bg-bubbles li:nth-child(7) {
-    
-    top: 45%;
-    left:50%;
-   
-  
-   
-  }
-  
-  .bg-bubbles li:nth-child(8) {
-   
-    
-   
-  
-    
-    -webkit-animation-delay: 500ms;
-  
-    top: 25%;
-    left:55%;
-  }
-  
-  .bg-bubbles li:nth-child(9) {
-    
-    top: 7%;
-    left:57%;
-   
-    
-    animation-delay: 2s;
-  
-  }
-  
-  .bg-bubbles li:nth-child(10) {
-  
-    top: 50%;
-    left:60%;
-  
-  
-  }
-  
-  .bg-bubbles li:nth-child(11) {
-    
-   
-    top: 30%;
-    left:65%;
-  }
-  
-  .bg-bubbles li:nth-child(12) {
-   
-    top: 58%;
-    left:33%;
-  
-  }
-  .bg-bubbles li:nth-child(13) {
-    
-    top: 5%;
-    left:65%;
-   
-    
-  }
-  .bg-bubbles li:nth-child(14) {
-    
-    top: 58%;
-    left:45%;
-   
-    
-  }
-  
-  
-  
-  @-webkit-keyframes bubble {
-    0% {
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-    }
-    50% {
-      -webkit-transform: translateY(-10px) ;
-      transform: translateY(-10px);
-      -webkit-transform: translateX(10);
-      transform: translateX(10);
-    }
-    100%{
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-    }
-  }
-  
-  @keyframes bubble {
-    0% {
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-    }
-    50% {
-      -webkit-transform: translateY(-10px) ;
-      transform: translateY(-10px);
-      -webkit-transform: translateX(10);
-      transform: translateX(10);
-    }
-    100%{
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-      -webkit-transform: translateX(0);
-      transform: translateX(0);
-    }
-  }
+}
