--- a/src/App.css
+++ b/src/App.css
@@ -209,7 +209,10 @@ position: fixed;
 
 }
 
-
+.trends{
+  text-align: center;
+  padding: 3vh;
+}
 
 @media screen and (max-width: 700px) {
 .flex-container {
