--- a/src/components/Cloud.css
+++ b/src/components/Cloud.css
@@ -1,5 +1,11 @@
-.customtooltip{
-    background: #1f5156 !important;
-    font-size: 1em !important;
-    font-weight: 400 !important;
-}
+
+
+.react-tooltip-lite {
+    background: #1f5156;
+    color: white;
+    text-align: right;
+  }
+
+  .tootipHeader{
+    text-align: center;
+  }
